...
  final String schedulableSessionId; // New field for schedulable session
  final String sessionTypeId; // New field for session type
  final String locationId; // New field for location
  final DateTime startTime;
  final DateTime endTime;

  Booking({
    required this.id,
    required this.instructorId,
    this.instructorName,
    required this.clientId,
    required this.clientName,
    required this.clientEmail,
...
